syntax = "proto3";

package meshtrade.type.v1;

option go_package = "github.com/meshtrade/api/go/type/v1;typev1";
option java_package = "co.meshtrade.api.type.v1";

/*
   SortingOrder is possible search sorting orders.
*/
enum SortingOrder {
  SORTING_ORDER_UNSPECIFIED = 0; // 0 not used to prevent unexpected default value behaviour
  SORTING_ORDER_ASC = 1; // Ascending sorting order
  SORTING_ORDER_DESC = 2; // Descending sorting order
}
